--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,13 +2,13 @@ server:
   port: "8181"
 spring:
   datasource:
-    url: 'jdbc:postgresql://192.168.1.9:5432/khob_db'
+    url: 'jdbc:postgresql://127.0.0.1:5432/khob_db'
     username: 'postgres'
     password: "0000"
     driver-class-name: 'org.postgresql.Driver'
   jpa:
     hibernate:
-      ddl-auto: 'update'
+      ddl-auto: 'create-drop'
 application:
   security:
     jwt:
